sf-dynamic-approvals/main/default/objects/DynamicApprovalStep__c/DynamicApprovalStep__c.object-meta.xml
<CustomObject>
    <label>Dynamic Approval Step</label>
    <nameField>
        <label>Approval Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Approval Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>