sf-dynamic-approvals/main/default/objects/DynamicApprovalStep__c/fields/ApprovalStepType__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStepType__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCFS</fullName>
            </value>
            <value>
                <fullName>YesChain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>