sf-dynamic-approvals/main/default/objects/DynamicApprovalStep__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to populate the latest approver - or the only approver in a FCFS step.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DynamicApprovalSteps</relationshipName>
    <type>Lookup</type>
</CustomField>