sf-dynamic-approvals/main/default/objects/DynamicApprovalStep__c/fields/DynamicApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>DynamicApprovalProcess__c</fullName>
    <label>Dynamic Approval Process</label>
    <referenceTo>DynamicApprovalProcess__c</referenceTo>
    <relationshipLabel>Dynamic Approval Steps</relationshipLabel>
    <relationshipName>DynamicApprovalSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>