sf-dynamic-approvals/main/default/objects/DynamicApprovalStep__c/fields/StepOrder__c.field-meta.xml
<CustomField>
    <fullName>StepOrder__c</fullName>
    <label>Step Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>